--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -1,25 +1,20 @@
 //
 // ============================================ Asciidoc HEADER =============================================
 //
-:doctype: book
-:source-highlighter: pygments
-:pygments-style: murphy
-//:toc: macro
-:toc: left
-:toclevels: 4
-:pagenums:
-:sectnums!:
-:sectnumlevels: 4
-// get rid of PDF 'Chapter' labs on level 1 headings
-:chapter-label:
+include::{ref_dir}/docs/boilerplate/book_style_settings.adoc[]
+
+//
+// Document-specific attributes
+//
 :copyright_year: 2017
+:spec_status: TRIAL
+
 //
 // HTML-only attributes
 //
 :linkcss:
 :keywords: task, planning, EHR, EMR, reference model, openehr
 :description: openEHR Task Planning Specification
-:spec_status: TRIAL
 
 include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
 
