--- a/docs/UML/classes/plan_item.adoc
+++ b/docs/UML/classes/plan_item.adoc
@@ -36,7 +36,7 @@ h|*0..1*
 a|Optional data-set to review prior to / as part of performing the Plan element.
 
 h|*0..1*
-|*order_tag*: `List<String>`
+|*order_tags*: `List<String>`
 a|References to order(s) being created and / or tracked by this Plan item. The value(s) must match `ORDER_REF._order_tag_` values from the list `WORK_PLAN._order_list_`.
 
 Multiple tags are only required if the same Task causes creation of, or tracks, more than one order.
