--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
 = specifications-PROC - openEHR Process Model Specifications
 
-This repository contains the document and model sources (Asciidoctor and MagicDraw) for the openEHR Process specifications. The published form may be accessed from the openEHR website http://www.openehr.org/releases/PROC/latest/docs/index[PROC specifications index page].
+This repository contains the document and model sources (Asciidoctor and MagicDraw) for the openEHR Process specifications.
+The published form may be accessed from the openEHR website https://www.openehr.org/releases/PROC[PROC specifications index page].
 
